# universal-llm-api-call

./: .env.example  README.md  pyproject.toml  requirements.txt
examples/: call_api.py  stream_api.py
src/: main.py  utils.py
tests/: test_main.py
